# MLOps-Patent

./: LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: mkdocs.yml
docs/docs/: index.md
patent/: __init__.py  dataset.py  features.py  plots.py
patent/modeling/: predict.py  train.py
